# aos_schema

./: .cursorrules  .gitignore  README.md
aos_envelope_frontend_v1_1/: README.md  (+1 more)
aos_standard_app_v1_1/: Dockerfile  Makefile  README.md  pyproject.toml
aos_standard_app_v1_1/agents/foreman/: agent.py
aos_standard_app_v1_1/agents/judge/: agent.py
aos_standard_app_v1_1/agents/librarian/: agent.py
aos_standard_app_v1_1/agents/messenger/: agent.py
aos_standard_app_v1_1/agents/sorcerer/: agent.py
aos_standard_app_v1_1/aos_runtime/: base_agent.py  cli.py  envelope.py  ids.py  io_utils.py  logging_utils.py  registry.py  runner.py  schema_validation.py
aos_standard_app_v1_1/examples/envelopes/: sorcerer_task.json
aos_standard_app_v1_1/registry/: vports.registry.v1.jsonl
aos_standard_app_v1_1/run_logs/task_foreman_0001/: envelope.json  response.json  run_record.json
aos_standard_app_v1_1/run_logs/task_sorcerer_0001/: response.json  run_record.json
aos_standard_app_v1_1/schemas/agents/foreman/: input.v1.schema.json  output.v1.schema.json
aos_standard_app_v1_1/schemas/agents/judge/: input.v1.schema.json  output.v1.schema.json
aos_standard_app_v1_1/schemas/agents/librarian/: input.v1.schema.json  output.v1.schema.json
aos_standard_app_v1_1/schemas/base/: agent_input.base.v1.schema.json  agent_output.base.v1.schema.json
aos_standard_app_v1_1/schemas/envelope/: aos.envelope.overlay.v1.schema.json
aos_standard_app_v1_1/schemas/meta/: agent.v2.1.schema.json
aos_standard_app_v1_1/tests/: test_validation.py
aos_standard_app_v1_1/web/: index.html
(+158 files in other folders)
